@@ -633,6 +633,12 @@ primary.test \
 primary2.test \
 primary3.test \
 proginst.test \
+py-compile-basic.test \
+py-compile-basic2.test \
+py-compile-basedir.test \
+py-compile-destdir.test \
+py-compile-env.test \
+py-compile-usage.test \
 python.test \
 python2.test \
 python3.test \
