@@ -1,5 +1,17 @@
 2011-06-08  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	python tests: add "unit tests" on py-compile
+	* tests/py-compile-basic.test: New test.
+	* tests/py-compile-basic2.test: New test.
+	* tests/py-compile-basedir.test: Likewise.
+	* tests/py-compile-destdir.test: Likewise.
+	* tests/py-compile-env.test: Likewise.
+	* tests/py-compile-usage.test: Likewise.
+	* tests/Makefile.am (TESTS): Update.
+	Tested with python 2.0.1, 2.4.6, 2.6.6, 2.7.1, and 3.1.3.
+
+2011-06-08  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	py-compile: the '--destdir' option now accepts a blank argument
 	* lib/py-compile (Option parsing): Do not count an empty argument
 	to `--destdir' or `--basedir' as a missing argument.
